==> kibu-keyboards/qmk_firmware/qmk_firmware/lib/chibios-contrib/os/hal/ports/HT32/LLD/USART_F5xxxx/hal_uart_lld.c <==
#include "hal.h"

void uart_lld_init(void) {
    /* Driver initialization. */
#if HT32_UART_USE_UART0 == TRUE
    uartObjectInit(&UARTD0);
    UARTD0.UART = UART0;
#endif
#if HT32_UART_USE_UART1 == TRUE
    uartObjectInit(&UARTD1);
    UARTD1.UART = UART1;
#endif
#if HT32_UART_USE_USART0 == TRUE
    uartObjectInit(&USARTD0);
    USARTD0.UART = USART0;
#endif
#if HT32_UART_USE_USART1 == TRUE
    uartObjectInit(&USARTD1);
    USARTD1.UART = USART1;
#endif

    /* Peripheral initialization. */
    CKCU->GCFGR = (CKCU->GCFGR & ~CKCU_GCFGR_URPRE_MASK) | ((HT32_USART_PRESCALER - 1) << 22);
}

void uart_lld_start(UARTDriver *uartp) {
    if (uartp->state == UART_STOP) {
        /* Enables the peripheral.*/
#if HT32_UART_USE_UART0 == TRUE
        if (&UARTD1 == uartp) {
            CKCU->APBCCR0 |= CKCU_APBCCR0_UR0EN;
            nvicEnableVector(UART0_IRQn, HT32_UART0_IRQ_PRIORITY);
        }
#endif
#if HT32_UART_USE_UART1 == TRUE
        if (&UARTD1 == uartp) {
            CKCU->APBCCR0 |= CKCU_APBCCR0_UR1EN;
            nvicEnableVector(UART1_IRQn, HT32_UART1_IRQ_PRIORITY);
        }
#endif
#if HT32_UART_USE_USART0 == TRUE
        if (&USARTD0 == uartp) {
            CKCU->APBCCR0 |= CKCU_APBCCR0_USR0EN;
            nvicEnableVector(USART0_IRQn, HT32_USART0_IRQ_PRIORITY);
        }
#endif
#if HT32_UART_USE_USART1 == TRUE
        if (&USARTD1 == uartp) {
            CKCU->APBCCR0 |= CKCU_APBCCR0_USR1EN;
            nvicEnableVector(USART1_IRQn, HT32_USART1_IRQ_PRIORITY);
        }
#endif
    }

    /* Configures the peripheral.*/
    uartp->UART->FCR = uartp->config->fcr;
    uartp->UART->LCR = uartp->config->lcr;
    uartp->UART->MDR = uartp->config->mdr;
    // baud = ck_ahb / dlr value
    uartp->UART->DLR = HT32_CK_AHB_FREQUENCY / uartp->config->baud;
}

void uart_lld_stop(UARTDriver *uartp) {
    if (uartp->state == UART_READY) {
        /* Resets the peripheral.*/
        /* Disables the peripheral.*/
#if HT32_UART_USE_UART0 == TRUE
        if (&UARTD0 == uartp) {
            RSTCU->APBPRSTR0 = RSTCU_APBPRSTR0_UR0RST;
            CKCU->APBCCR0 &= ~CKCU_APBCCR0_UR0EN;
            nvicDisableVector(UART0_IRQn);
        }
#endif
#if HT32_UART_USE_UART1 == TRUE
        if (&UARTD1 == uartp) {
            RSTCU->APBPRSTR0 = RSTCU_APBPRSTR0_UR1RST;
            CKCU->APBCCR0 &= ~CKCU_APBCCR0_UR1EN;
            nvicDisableVector(UART1_IRQn);
        }
#endif
#if HT32_UART_USE_USART0 == TRUE
        if (&USARTD0 == uartp) {
            RSTCU->APBPRSTR0 = RSTCU_APBPRSTR0_USR0RST;
            CKCU->APBCCR0 &= ~CKCU_APBCCR0_USR0EN;
            nvicDisableVector(USART0_IRQn);
        }
#endif
#if HT32_UART_USE_USART1 == TRUE
        if (&USARTD1 == uartp) {
            RSTCU->APBPRSTR0 = RSTCU_APBPRSTR0_USR1RST;
            CKCU->APBCCR0 &= ~CKCU_APBCCR0_USR1EN;
            nvicDisableVector(USART1_IRQn);
        }
#endif
    }
}

void uart_lld_start_send(UARTDriver *uartp, size_t n, const void *txbuf) {
    if ((uartp->config->lcr & 3) == 2) {
        uint16_t *txdata = (uint16_t *)txbuf;
        while(n > 0){
            uartp->UART->TBR = *txdata;
            while(!(uartp->UART->LSR & USART_LSR_TXEMPT))
                ;
            txdata++;
            n--;
        }
    } else {
        uint8_t *txdata = (uint8_t *)txbuf;
        while(n > 0){
            uartp->UART->TBR = *txdata;
            while(!(uartp->UART->LSR & USART_LSR_TXEMPT))
                ;
            txdata++;
            n--;
        }
    }
}
