==> kibu-keyboards/qmk_firmware/qmk_firmware/lib/chibios-contrib/os/hal/ports/TIVA/LLD/UART/hal_uart_lld.c <==
#include "hal.h"

void uart_lld_init(void)
{
#if TIVA_UART_USE_UART0
  uartObjectInit(&UARTD1);
  UARTD1.uart    = UART0_BASE;
  UARTD1.dmarxnr = TIVA_UART_UART0_RX_UDMA_CHANNEL;
  UARTD1.dmatxnr = TIVA_UART_UART0_TX_UDMA_CHANNEL;
  UARTD1.rxchnmap = TIVA_UART_UART0_RX_UDMA_MAPPING;
  UARTD1.txchnmap = TIVA_UART_UART0_TX_UDMA_MAPPING;
#endif
#if TIVA_UART_USE_UART1
  uartObjectInit(&UARTD2);
  UARTD2.uart    = UART1_BASE;
  UARTD2.dmarxnr = TIVA_UART_UART1_RX_UDMA_CHANNEL;
  UARTD2.dmatxnr = TIVA_UART_UART1_TX_UDMA_CHANNEL;
  UARTD2.rxchnmap = TIVA_UART_UART1_RX_UDMA_MAPPING;
  UARTD2.txchnmap = TIVA_UART_UART1_TX_UDMA_MAPPING;
#endif
#if TIVA_UART_USE_UART2
  uartObjectInit(&UARTD3);
  UARTD2.uart    = UART2_BASE;
  UARTD2.dmarxnr = TIVA_UART_UART2_RX_UDMA_CHANNEL;
  UARTD2.dmatxnr = TIVA_UART_UART2_TX_UDMA_CHANNEL;
  UARTD2.rxchnmap = TIVA_UART_UART2_RX_UDMA_MAPPING;
  UARTD2.txchnmap = TIVA_UART_UART2_TX_UDMA_MAPPING;
#endif
#if TIVA_UART_USE_UART3
  uartObjectInit(&UARTD4);
  UARTD4.uart    = UART3_BASE;
  UARTD4.dmarxnr = TIVA_UART_UART3_RX_UDMA_CHANNEL;
  UARTD4.dmatxnr = TIVA_UART_UART3_TX_UDMA_CHANNEL;
  UARTD4.rxchnmap = TIVA_UART_UART3_RX_UDMA_MAPPING;
  UARTD4.txchnmap = TIVA_UART_UART3_TX_UDMA_MAPPING;
#endif
#if TIVA_UART_USE_UART4
  uartObjectInit(&UARTD5);
  UARTD5.uart    = UART4_BASE;
  UARTD5.dmarxnr = TIVA_UART_UART4_RX_UDMA_CHANNEL;
  UARTD5.dmatxnr = TIVA_UART_UART4_TX_UDMA_CHANNEL;
  UARTD5.rxchnmap = TIVA_UART_UART4_RX_UDMA_MAPPING;
  UARTD5.txchnmap = TIVA_UART_UART4_TX_UDMA_MAPPING;
#endif
#if TIVA_UART_USE_UART5
  uartObjectInit(&UARTD6);
  UARTD6.uart    = UART5_BASE;
  UARTD6.dmarxnr = TIVA_UART_UART5_RX_UDMA_CHANNEL;
  UARTD6.dmatxnr = TIVA_UART_UART5_TX_UDMA_CHANNEL;
  UARTD6.rxchnmap = TIVA_UART_UART5_RX_UDMA_MAPPING;
  UARTD6.txchnmap = TIVA_UART_UART5_TX_UDMA_MAPPING;
#endif
#if TIVA_UART_USE_UART6
  uartObjectInit(&UARTD7);
  UARTD7.uart    = UART6_BASE;
  UARTD7.dmarxnr = TIVA_UART_UART6_RX_UDMA_CHANNEL;
  UARTD7.dmatxnr = TIVA_UART_UART6_TX_UDMA_CHANNEL;
  UARTD7.rxchnmap = TIVA_UART_UART6_RX_UDMA_MAPPING;
  UARTD7.txchnmap = TIVA_UART_UART6_TX_UDMA_MAPPING;
#endif
#if TIVA_UART_USE_UART7
  uartObjectInit(&UARTD8);
  UARTD8.uart    = UART7_BASE;
  UARTD8.dmarxnr = TIVA_UART_UART7_RX_UDMA_CHANNEL;
  UARTD8.dmatxnr = TIVA_UART_UART7_TX_UDMA_CHANNEL;
  UARTD8.rxchnmap = TIVA_UART_UART7_RX_UDMA_MAPPING;
  UARTD8.txchnmap = TIVA_UART_UART7_TX_UDMA_MAPPING;
#endif
}

void uart_lld_start(UARTDriver *uartp) {

  if (uartp->state == UART_STOP) {
#if TIVA_UART_USE_UART0
    if (&UARTD1 == uartp) {
      bool b;
      b = udmaChannelAllocate(uartp->dmarxnr);
      osalDbgAssert(!b, "channel already allocated");
      b = udmaChannelAllocate(uartp->dmatxnr);
      osalDbgAssert(!b, "channel already allocated");

      HWREG(SYSCTL_RCGCUART) |= (1 << 0);

      while (!(HWREG(SYSCTL_PRUART) & (1 << 0)))
        ;

      nvicEnableVector(TIVA_UART0_NUMBER, TIVA_UART_UART0_PRIORITY);
    }
#endif
#if TIVA_UART_USE_UART1
    if (&UARTD2 == uartp) {
      bool b;
      b = udmaChannelAllocate(uartp->dmarxnr);
      osalDbgAssert(!b, "channel already allocated");
      b = udmaChannelAllocate(uartp->dmatxnr);
      osalDbgAssert(!b, "channel already allocated");

      HWREG(SYSCTL_RCGCUART) |= (1 << 1);

      while (!(HWREG(SYSCTL_PRUART) & (1 << 1)))
        ;

      nvicEnableVector(TIVA_UART1_NUMBER, TIVA_UART_UART1_PRIORITY);
    }
#endif
#if TIVA_UART_USE_UART2
    if (&UARTD3 == uartp) {
      bool b;
      b = udmaChannelAllocate(uartp->dmarxnr);
      osalDbgAssert(!b, "channel already allocated");
      b = udmaChannelAllocate(uartp->dmatxnr);
      osalDbgAssert(!b, "channel already allocated");

      HWREG(SYSCTL_RCGCUART) |= (1 << 2);

      while (!(HWREG(SYSCTL_PRUART) & (1 << 2)))
        ;

      nvicEnableVector(TIVA_UART2_NUMBER, TIVA_UART_UART2_PRIORITY);
    }
#endif
#if TIVA_UART_USE_UART3
    if (&UARTD4 == uartp) {
      bool b;
      b = udmaChannelAllocate(uartp->dmarxnr);
      osalDbgAssert(!b, "channel already allocated");
      b = udmaChannelAllocate(uartp->dmatxnr);
      osalDbgAssert(!b, "channel already allocated");

      HWREG(SYSCTL_RCGCUART) |= (1 << 3);

      while (!(HWREG(SYSCTL_PRUART) & (1 << 3)))
        ;

      nvicEnableVector(TIVA_UART3_NUMBER, TIVA_UART_UART3_PRIORITY);
    }
#endif
#if TIVA_UART_USE_UART4
    if (&UARTD5 == uartp) {
      bool b;
      b = udmaChannelAllocate(uartp->dmarxnr);
      osalDbgAssert(!b, "channel already allocated");
      b = udmaChannelAllocate(uartp->dmatxnr);
      osalDbgAssert(!b, "channel already allocated");

      HWREG(SYSCTL_RCGCUART) |= (1 << 4);

      while (!(HWREG(SYSCTL_PRUART) & (1 << 4)))
        ;

      nvicEnableVector(TIVA_UART4_NUMBER, TIVA_UART_UART4_PRIORITY);
    }
#endif
#if TIVA_UART_USE_UART5
    if (&UARTD6 == uartp) {
      bool b;
      b = udmaChannelAllocate(uartp->dmarxnr);
      osalDbgAssert(!b, "channel already allocated");
      b = udmaChannelAllocate(uartp->dmatxnr);
      osalDbgAssert(!b, "channel already allocated");

      HWREG(SYSCTL_RCGCUART) |= (1 << 5);

      while (!(HWREG(SYSCTL_PRUART) & (1 << 5)))
        ;

      nvicEnableVector(TIVA_UART5_NUMBER, TIVA_UART_UART5_PRIORITY);
    }
#endif
#if TIVA_UART_USE_UART6
    if (&UARTD7 == uartp) {
      bool b;
      b = udmaChannelAllocate(uartp->dmarxnr);
      osalDbgAssert(!b, "channel already allocated");
      b = udmaChannelAllocate(uartp->dmatxnr);
      osalDbgAssert(!b, "channel already allocated");

      HWREG(SYSCTL_RCGCUART) |= (1 << 6);

      while (!(HWREG(SYSCTL_PRUART) & (1 << 6)))
        ;

      nvicEnableVector(TIVA_UART6_NUMBER, TIVA_UART_UART6_PRIORITY);
    }
#endif
#if TIVA_UART_USE_UART7
    if (&UARTD8 == uartp) {
      bool b;
      b = udmaChannelAllocate(uartp->dmarxnr);
      osalDbgAssert(!b, "channel already allocated");
      b = udmaChannelAllocate(uartp->dmatxnr);
      osalDbgAssert(!b, "channel already allocated");

      HWREG(SYSCTL_RCGCUART) |= (1 << 7);

      while (!(HWREG(SYSCTL_PRUART) & (1 << 7)))
        ;

      nvicEnableVector(TIVA_UART7_NUMBER, TIVA_UART_UART7_PRIORITY);
    }
#endif

    uartp->rxbuf = 0;

    HWREG(UDMA_CHMAP0 + (uartp->dmarxnr / 8) * 4) |= (uartp->rxchnmap << (uartp->dmarxnr % 8));
    HWREG(UDMA_CHMAP0 + (uartp->dmatxnr / 8) * 4) |= (uartp->txchnmap << (uartp->dmatxnr % 8));
  }

  uartp->rxstate = UART_RX_IDLE;
  uartp->txstate = UART_TX_IDLE;
  uart_init(uartp);
}

void uart_lld_stop(UARTDriver *uartp) {

  if (uartp->state == UART_READY) {
    uart_stop(uartp);
    udmaChannelRelease(uartp->dmarxnr);
    udmaChannelRelease(uartp->dmatxnr);

#if TIVA_UART_USE_UART0
    if (&UARTD1 == uartp) {
      HWREG(SYSCTL_RCGCUART) &= ~(1 << 0);
      return;
    }
#endif
#if TIVA_UART_USE_UART1
    if (&UARTD2 == uartp) {
      HWREG(SYSCTL_RCGCUART) &= ~(1 << 1);
      return;
    }
#endif
#if TIVA_UART_USE_UART2
    if (&UARTD3 == uartp) {
      HWREG(SYSCTL_RCGCUART) &= ~(1 << 2);
      return;
    }
#endif
#if TIVA_UART_USE_UART3
    if (&UARTD4 == uartp) {
      HWREG(SYSCTL_RCGCUART) &= ~(1 << 3);
      return;
    }
#endif
#if TIVA_UART_USE_UART4
    if (&UARTD5 == uartp) {
      HWREG(SYSCTL_RCGCUART) &= ~(1 << 4);
      return;
    }
#endif
#if TIVA_UART_USE_UART5
    if (&UARTD6 == uartp) {
      HWREG(SYSCTL_RCGCUART) &= ~(1 << 5);
      return;
    }
#endif
#if TIVA_UART_USE_UART6
    if (&UARTD7 == uartp) {
      HWREG(SYSCTL_RCGCUART) &= ~(1 << 6);
      return;
    }
#endif
#if TIVA_UART_USE_UART7
    if (&UARTD8 == uartp) {
      HWREG(SYSCTL_RCGCUART) &= ~(1 << 7);
      return;
    }
#endif
  }
}

void uart_lld_start_send(UARTDriver *uartp, size_t n, const void *txbuf)
{
  tiva_udma_table_entry_t *primary = udmaControlTable.primary;

  /* TODO: This assert should be moved to the dma helper driver */
  osalDbgAssert((uint32_t)txbuf >= SRAM_BASE, "txbuf should be in SRAM region.");

  dmaChannelDisable(uartp->dmatxnr);

  /* Configure for 8-bit transfers.*/
  primary[uartp->dmatxnr].srcendp = (volatile void *)txbuf+n-1;
  primary[uartp->dmatxnr].dstendp = (void *)(uartp->uart + UART_O_DR);
  primary[uartp->dmatxnr].chctl = UDMA_CHCTL_DSTSIZE_8 | UDMA_CHCTL_DSTINC_NONE |
                                  UDMA_CHCTL_SRCSIZE_8 | UDMA_CHCTL_SRCINC_8 |
                                  UDMA_CHCTL_ARBSIZE_4 |
                                  UDMA_CHCTL_XFERSIZE(n) |
                                  UDMA_CHCTL_XFERMODE_BASIC;

  dmaChannelSingleBurst(uartp->dmatxnr);
  dmaChannelPrimary(uartp->dmatxnr);
  dmaChannelPriorityDefault(uartp->dmatxnr);
  dmaChannelEnableRequest(uartp->dmatxnr);

  /* Enable DMA channel, transfer starts immediately.*/
  dmaChannelEnable(uartp->dmatxnr);
}
